lab1/Test/L1-A-10-25.output
Error Type B at Line 1
Error Type A at Line 5
Error Type B at Line 12
Error Type B at Line 21
Error Type B at Line 22
Error Type A at Line 36
Error Type A at Line 39
Error Type A at Line 56
Error Type A at Line 58
Error Type B at Line 69
